update html and css

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,12 @@
 <body>
     <div class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Por</a><span>fólio</span></div>
+            <div class="logo"><a href="#">Por<span>fólio</span></a></div>
             <ul class="menu">
                 <li><a href="#">Inicio</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="">Sobre Mim</a></li>
+                <li><a href="">Conhecimentos</a></li>
+                <li><a href="">Contato</a></li>
             </ul>
         </div>
     </div>
