--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,24 @@
 <body>
     <div class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Por<span>fólio</span></a></div>
+            <div class="logo"><a href="#">Port<span>fólio</span></a></div>
             <ul class="menu">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="">Sobre Mim</a></li>
-                <li><a href="">Conhecimentos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Most Used Languages</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </div>
     </div>
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hi Dev, my name is</div>
+                <div class="text-2">Vinicius Ederman</div>
+                <div class="text-3">I'm a<span></span>computer engineering student</div>
+            </div>
+        </div>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
