--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <div class="home-content">
                 <div class="text-1">Hi Dev, my name is</div>
                 <div class="text-2">Vinicius Ederman</div>
-                <div class="text-3">I'm a<span></span>computer engineering student</div>
+                <div class="text-3">I'm a <span>computer engineering student</span></div>
             </div>
         </div>
     </section>
