--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,24 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hi Dev, my name is</div>
+                <div class="text-1">Hi Dev, my name is:</div>
                 <div class="text-2">Vinicius Ederman</div>
                 <div class="text-3">I'm a <span>computer engineering student</span></div>
             </div>
         </div>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
