--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
                 <li><a href="">Most Used Languages</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
+            <div class="menu-btn">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
         </div>
     </div>
     <section class="home" id="home">
@@ -25,7 +28,7 @@
             <div class="home-content">
                 <div class="text-1">Hi Dev, my name is:</div>
                 <div class="text-2">Vinicius Ederman</div>
-                <div class="text-3">I'm a <span>computer engineering student</span></div>
+                <div class="text-3">I'm <span>computer engineering student</span></div>
             </div>
         </div>
     </section>
