--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
                 <div class="text-1">Hi Dev, my name is:</div>
                 <div class="text-2">Vinicius Ederman</div>
                 <div class="text-3">I'm <span>computer engineering student</span></div>
+                <a href="https://github.com/ViniciusEderman" target="_blank">My Github</a>
             </div>
         </div>
     </section>
