--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
             </div>
         </div>
     </div>
+
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -33,14 +34,18 @@
             </div>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="/Img/foto_linkedin.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
