Update in 07:16 pm(day = 22/05)

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,7 +30,7 @@
             <div class="home-content">
                 <div class="text-1">Hi Dev, my name is:</div>
                 <div class="text-2">Vinicius Ederman</div>
-                <div class="text-3">I'm <span>computer engineering student</span></div>
+                <div class="text-3">I'm a <span>computer engineering student</span></div>
                 <a href="https://github.com/ViniciusEderman" target="_blank">My Github</a>
             </div>
         </div>
@@ -37,10 +38,24 @@
 
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About</h2>
+            <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="/Img/foto_linkedin.jpg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">Pt-Br: Me chamo Vinicius Ederman. <p>
+                            Sou estagiário na Elife e atualmente
+                            me encontro estudando programação diaramente, espero que você possa me dar um retorno sobre
+                            este portfólio. Fico no aguardo de dicas e críticas construtivas.
+                            <br>
+                            <br>
+                            En-Us: My name is Vinicius Ederman. I am an intern at Elife and currently
+                            I find myself studying programming daily, I hope you can give me some feedback on this
+                            portfolio. I look forward to tips and constructive criticism.
+                            <a href="#">Download my curriculum</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
