--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="">About Me</a></li>
-                <li><a href="">Most Used Languages</a></li>
+                <li><a href="">Certificates</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -57,6 +57,24 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="certificates" id="certificates">
+        <div class="max-width">
+            <h2 class="title">Certificates</h2>
+            <div class="serv-content">
+               <div class="card">
+                   <div class="box">
+                    <ion-icon name="brush-outline"></ion-icon>
+                    <div class="text">Certificates</div>
+                    <p>
+                        Pt-br: <br>
+                        
+                    </p>
+                   </div>
+               </div>
             </div>
         </div>
     </section>
