--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,10 @@
                     <img src="/Img/foto_linkedin.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Pt-Br: Me chamo Vinicius Ederman. <p>
-                            Sou estagiário na Elife e atualmente
-                            me encontro estudando programação diaramente, espero que você possa me dar um retorno sobre
+                    <div class="text">
+                        Pt-Br: Me chamo Vinicius Ederman.
+                        <p>Sou estagiário na Elife e atualmente me encontro estudando programação diaramente, espero que
+                            você possa me dar um retorno sobre
                             este portfólio. Fico no aguardo de dicas e críticas construtivas.
                             <br>
                             <br>
@@ -65,16 +66,16 @@
         <div class="max-width">
             <h2 class="title">Certificates</h2>
             <div class="serv-content">
-               <div class="card">
-                   <div class="box">
-                    <ion-icon name="brush-outline"></ion-icon>
-                    <div class="text">Certificates</div>
-                    <p>
-                        Pt-br: <br>
-                        
-                    </p>
-                   </div>
-               </div>
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="brush-outline"></ion-icon>
+                        <div class="text">Certificates</div>
+                        <p>
+                            Pt-br: <br>
+
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
