update at 6:57 pm

--- a/public/index.html
+++ b/public/index.html
@@ -62,23 +62,59 @@
         </div>
     </section>
 
-    <section class="certificates" id="certificates">
+
+    <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">Certificates</h2>
+            <h2 class="title">Experiences</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="brush-outline"></ion-icon>
-                        <div class="text">Certificates</div>
-                        <p>
-                            Pt-br: <br>
+                        <ion-icon name="code-working-outline"></ion-icon>
+                        <div class="text">Company: Tempor</div>
+                        <p>Tipo: Jovem aprendiz <br>
+                            Tempo: 10-2020 até 10-2021 <br>
+                            Atividades: Suprimentos, Controle de Estoque, Suporte de Redes, Inovação e Gerenciamento do
+                            Sistema SGG.
+                        </p>
+                    </div>
+                </div>
 
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="code-download-outline"></ion-icon>
+                        <div class="text">Company: Secretaria da Controladoria Geral do Estado</div>
+                        <p>Tipo: Estagiário <br>
+                            Tempo: 11-2021 até 12-2021 <br>
+                            Atividades: Suporte
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="code-outline"></ion-icon>
+                        <div class="text">Company: Prefeitura de Jaboatão dos Guararapes</div>
+                        <p>Tipo: Estágio <br>
+                            Tempo: 12-2021 até 04-2022 <br>
+                            Atividades: Desenvolvimento de aplicações web(front-end).
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="bug-outline"></ion-icon>
+                        <div class="text">Company: Elife</div>
+                        <p>Tipo: Estagiário <br>
+                            Tempo: 04-2022(Atualmente) <br>
+                            Atividades: Desenvolvimento Web(full stack)
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
