finished the style of experiences

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                 <div class="card">
                     <div class="box">
                         <ion-icon name="code-working-outline"></ion-icon>
-                        <div class="text">Company: Tempor</div>
+                        <div class="text">Tempor</div>
                         <p>Tipo: Jovem aprendiz <br>
                             Tempo: 10-2020 até 10-2021 <br>
                             Atividades: Suprimentos, Controle de Estoque, Suporte de Redes, Inovação e Gerenciamento do
@@ -82,7 +82,7 @@
                 <div class="card">
                     <div class="box">
                         <ion-icon name="code-download-outline"></ion-icon>
-                        <div class="text">Company: Secretaria da Controladoria Geral do Estado</div>
+                        <div class="text">Secretaria da Controladoria Geral do Estado</div>
                         <p>Tipo: Estagiário <br>
                             Tempo: 11-2021 até 12-2021 <br>
                             Atividades: Suporte
@@ -93,7 +93,7 @@
                 <div class="card">
                     <div class="box">
                         <ion-icon name="code-outline"></ion-icon>
-                        <div class="text">Company: Prefeitura de Jaboatão dos Guararapes</div>
+                        <div class="text">Prefeitura de Jaboatão dos Guararapes</div>
                         <p>Tipo: Estágio <br>
                             Tempo: 12-2021 até 04-2022 <br>
                             Atividades: Desenvolvimento de aplicações web(front-end).
@@ -104,7 +104,7 @@
                 <div class="card">
                     <div class="box">
                         <ion-icon name="bug-outline"></ion-icon>
-                        <div class="text">Company: Elife</div>
+                        <div class="text">Elife</div>
                         <p>Tipo: Estagiário <br>
                             Tempo: 04-2022(Atualmente) <br>
                             Atividades: Desenvolvimento Web(full stack)
