--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="">About Me</a></li>
                 <li><a href="">Certificates</a></li>
+                <li><a href="">Skills</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -112,6 +113,64 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My Skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My soft skills and hard skills</div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis facere incidunt ex ullam
+                        maiores accusamus reprehenderit labore totam sed suscipit iure exercitationem natus sit magni
+                        ratione est sunt animi tempora earum voluptate dicta, corporis error? Quam vel sapiente officiis
+                        consequatur incidunt veniam voluptas possimus beatae sit ex aperiam accusantium, recusandae
+                        suscipit! Quisquam porro praesentium totam asperiores assumenda libero sequi dolores quae, ullam
+                        ipsam quaerat earum necessitatibus amet dolor architecto vel beatae laudantium magni
+                        consequuntur voluptates deserunt laboriosam accusamus! Praesentium suscipit facere nostrum
+                        recusandae nihil unde quibusdam sit ipsa dicta aliquid, libero, tempore voluptates iste mollitia
+                        neque? Atque non velit perspiciatis.
+                    </p>
+                    <a href="#">More informations</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>Java</span>
+                            <span>31.18%</span>
+                        </div>
+                        <div class="line java"></div>
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>22.14%</span>
+                        </div>
+                        <div class="line js"></div>
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>19.85%</span>
+                        </div>
+                        <div class="line html"></div>
+                        <div class="info">
+                            <span>Python</span>
+                            <span>15.2%</span>
+                        </div>
+                        <div class="line python"></div>
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>11.64%</span>
+                        </div>
+                        <div class="line css"></div>
+                        <div class="info">
+                            <span>SQL Sgbd's</span>
+                            <span>MySql/MongoDb</span>
+                        </div>
+                        <div class="line sql"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
