--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,65 @@
         </div>
     </section>
 
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Talk To Me</div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa magnam, dolores
+                        libero, odio sequi quia autem rem aut modi ex molestiae eligendi sit ratione id nostrum labore
+                        voluptatem fugit?</p>
+                    <div class="icons">
+                        <div class="row">
+                            <ion-icon name="person-add-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">My Cellphone:</div>
+                                <div class="sub-title">+55 (87)99128-1039</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <ion-icon name="home-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">My Address:</div>
+                                <div class="sub-title">Brazil - Pernambuco - Recife</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <ion-icon name="mail-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">My Email:</div>
+                                <div class="sub-title">vinicius-edermanmc@hotmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                            <div class="field">
+                                <input type="text" placeholder="Sobrenome" required>
+                            </div>
+                            <div class="field textarea">
+                                <textarea cols="30" rows="10" placeholder="Type..." required></textarea>
+                            </div>
+                            <div class="button">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
