--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
                             En-Us: My name is Vinicius Ederman. I am an intern at Elife and currently
                             I find myself studying programming daily, I hope you can give me some feedback on this
                             portfolio. I look forward to tips and constructive criticism.
+                            <br>
                             <a href="#">Download my curriculum</a>
                         </p>
                     </div>
@@ -186,7 +187,7 @@
                         <div class="row">
                             <ion-icon name="person-add-outline"></ion-icon>
                             <div class="info">
-                                <div class="head">My Cellphone:</div>
+                                <div class="head">My Number:</div>
                                 <div class="sub-title">+55 (87)99128-1039</div>
                             </div>
                         </div>
@@ -204,39 +205,19 @@
                                 <div class="sub-title">vinicius-edermanmc@hotmail.com</div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="column right">
-                    <div class="text">Message</div>
-                    <form action="#">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
-                            </div>
-                            <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
-                            <div class="field">
-                                <input type="text" placeholder="Sobrenome" required>
-                            </div>
-                            <div class="field textarea">
-                                <textarea cols="30" rows="10" placeholder="Type..." required></textarea>
-                            </div>
-                            <div class="button">
-                                <button type="submit">Enviar</button>
+                        <div class="row">
+                            <ion-icon name="logo-linkedin"></ion-icon>
+                            <div class="info">
+                                <div class="head">My Linkedin:</div>
+                                <div class="sub-title">Vinicius Magalhães or <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/" target="_blank">Click Here</a></div>
                             </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </section>
 
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/script.js"></script>
+                <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+                <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                <script src="/js/script.js"></script>
 </body>
-
 </html>
