--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/Img/foto_linkedin.jpg" alt="">
+                    <img src="/assets/img/foto_linkedin.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">
@@ -56,7 +56,7 @@
                             I find myself studying programming daily, I hope you can give me some feedback on this
                             portfolio. I look forward to tips and constructive criticism.
                             <br>
-                            <a href="#">Download my curriculum</a>
+                            <a href="/assets/documents/curriculo_atual.pdf" target="_blank">Download my curriculum</a>
                         </p>
                     </div>
                 </div>
@@ -75,8 +75,7 @@
                         <div class="text">Tempor</div>
                         <p>Tipo: Jovem aprendiz <br>
                             Tempo: 10-2020 até 10-2021 <br>
-                            Atividades: Suprimentos, Controle de Estoque, Suporte de Redes, Inovação e Gerenciamento do
-                            Sistema SGG.
+                            Atividades: Gerenciamento do sistema SGG, inovação do setor ADM
                         </p>
                     </div>
                 </div>
@@ -134,7 +133,7 @@
                         recusandae nihil unde quibusdam sit ipsa dicta aliquid, libero, tempore voluptates iste mollitia
                         neque? Atque non velit perspiciatis.
                     </p>
-                    <a href="#">More informations</a>
+                    <a href="#">My Projects(Em Breve)</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -205,13 +204,15 @@
                                 <div class="sub-title">vinicius-edermanmc@hotmail.com</div>
                             </div>
                         </div>
+                        <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/">
                         <div class="row">
                             <ion-icon name="logo-linkedin"></ion-icon>
                             <div class="info">
                                 <div class="head">My Linkedin:</div>
-                                <div class="sub-title">Vinicius Magalhães or <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/" target="_blank">Click Here</a></div>
+                                <div class="sub-title">Vinicius Magalhães or Click Here</div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
 
