--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
+    <div class="scroll-up-btn">
+        <ion-icon name="arrow-up-outline"></ion-icon>
+    </div>
     <div class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Port<span>fólio</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Certificates</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#services">Experiences</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -31,7 +34,7 @@
             <div class="home-content">
                 <div class="text-1">Hi Dev, my name is:</div>
                 <div class="text-2">Vinicius Ederman</div>
-                <div class="text-3">I'm a <span>computer engineering student</span></div>
+                <div class="text-3">I'm a computer engineering studant <br><span class="typing"></span></div>
                 <a href="https://github.com/ViniciusEderman" target="_blank">My Github</a>
             </div>
         </div>
@@ -39,7 +42,7 @@
 
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About Me</h2>
+            <h2 class="title"><span class="typing-2"></span></h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="/assets/img/foto_linkedin.jpg" alt="">
@@ -67,7 +70,7 @@
 
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">Experiences</h2>
+            <h2 class="title"><span class="typing-3"></span></h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
@@ -118,7 +121,7 @@
 
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My Skills</h2>
+            <h2 class="title"><span class="typing-4"></span></h2>
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My soft skills and hard skills</div>
@@ -175,7 +178,7 @@
 
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact</h2>
+            <h2 class="title"><span class="typing-5"></span></h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Talk To Me</div>
@@ -220,5 +223,6 @@
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
                 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 <script src="/js/script.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 </body>
 </html>
