change in color about linkedin

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
                         <div class="row">
                             <ion-icon name="logo-linkedin"></ion-icon>
                             <div class="info">
-                                <div class="head">My Linkedin:</div>
+                                <div class="head" style="color: #333;">My Linkedin:</div>
                                 <div class="sub-title">Vinicius Magalhães or Click Here</div>
                             </div>
                         </div>
