Add blank at linkedin href

--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
                                 <div class="sub-title">vinicius-edermanmc@hotmail.com</div>
                             </div>
                         </div>
-                        <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/">
+                        <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/" target="_blank">
                         <div class="row">
                             <ion-icon name="logo-linkedin"></ion-icon>
                             <div class="info">
