Alteracao de paragrafos

--- a/public/index.html
+++ b/public/index.html
@@ -126,15 +126,7 @@
                 <div class="column left">
                     <div class="text">My soft skills and hard skills</div>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis facere incidunt ex ullam
-                        maiores accusamus reprehenderit labore totam sed suscipit iure exercitationem natus sit magni
-                        ratione est sunt animi tempora earum voluptate dicta, corporis error? Quam vel sapiente officiis
-                        consequatur incidunt veniam voluptas possimus beatae sit ex aperiam accusantium, recusandae
-                        suscipit! Quisquam porro praesentium totam asperiores assumenda libero sequi dolores quae, ullam
-                        ipsam quaerat earum necessitatibus amet dolor architecto vel beatae laudantium magni
-                        consequuntur voluptates deserunt laboriosam accusamus! Praesentium suscipit facere nostrum
-                        recusandae nihil unde quibusdam sit ipsa dicta aliquid, libero, tempore voluptates iste mollitia
-                        neque? Atque non velit perspiciatis.
+                        Aqui irei listar em texto um pouco sobre minhas habilidades, conhecidas como soft-skills e hard-skills
                     </p>
                     <a href="#">My Projects(Em Breve)</a>
                 </div>
@@ -182,9 +174,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Talk To Me</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa magnam, dolores
-                        libero, odio sequi quia autem rem aut modi ex molestiae eligendi sit ratione id nostrum labore
-                        voluptatem fugit?</p>
+                    <p>Aqui irei falar um pouco à respeito de minha própria pessoa</p>
                     <div class="icons">
                         <div class="row">
                             <ion-icon name="person-add-outline"></ion-icon>
