ajustando coluna de contatos

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,6 @@
         <div class="max-width">
             <h2 class="title"><span class="typing-5"></span></h2>
             <div class="contact-content">
-                <div class="column left">
                     <div class="text">Talk To Me</div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa magnam, dolores
                         libero, odio sequi quia autem rem aut modi ex molestiae eligendi sit ratione id nostrum labore
@@ -207,7 +206,7 @@
                                 <div class="sub-title">vinicius-edermanmc@hotmail.com</div>
                             </div>
                         </div>
-                        <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/">
+                        <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/" target="_blank">
                         <div class="row">
                             <ion-icon name="logo-linkedin"></ion-icon>
                             <div class="info">
@@ -217,7 +216,6 @@
                         </div>
                         </a>
                     </div>
-                </div>
 
                 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
