resolvendo problema de contato espaçado

--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,8 @@
                 <div class="column left">
                     <div class="text">My soft skills and hard skills</div>
                     <p>
-                        Aqui irei listar em texto um pouco sobre minhas habilidades, conhecidas como soft-skills e hard-skills
+                        Aqui irei listar em texto um pouco sobre minhas habilidades, conhecidas como soft-skills e
+                        hard-skills
                     </p>
                     <a href="#">My Projects(Em Breve)</a>
                 </div>
@@ -172,6 +173,7 @@
         <div class="max-width">
             <h2 class="title"><span class="typing-5"></span></h2>
             <div class="contact-content">
+                <div class="column-left">
                     <div class="text">Talk To Me</div>
                     <p>Aqui irei falar um pouco à respeito de minha própria pessoa</p>
                     <div class="icons">
@@ -197,20 +199,25 @@
                             </div>
                         </div>
                         <a href="https://www.linkedin.com/in/vinicius-magalh%C3%A3es-8713351a4/" target="_blank">
-                        <div class="row">
-                            <ion-icon name="logo-linkedin"></ion-icon>
-                            <div class="info">
-                                <div class="head" style="color: #333;">My Linkedin:</div>
-                                <div class="sub-title">Vinicius Magalhães or Click Here</div>
+                            <div class="row">
+                                <ion-icon name="logo-linkedin"></ion-icon>
+                                <div class="info">
+                                    <div class="head" style="color: #333;">My Linkedin:</div>
+                                    <div class="sub-title">Vinicius Magalhães or Click Here</div>
+                                </div>
                             </div>
-                        </div>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-                <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-                <script src="/js/script.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 </body>
+
 </html>
