add tag br in text

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
                 <div class="card">
                     <div class="box">
                         <ion-icon name="code-download-outline"></ion-icon>
-                        <div class="text">Secretaria da Controladoria Geral do Estado</div>
+                        <div class="text">Secretaria da Controladoria <br>Geral do Estado</div>
                         <p>Tipo: Estagiário <br>
                             Tempo: 11-2021 até 12-2021 <br>
                             Atividades: Suporte
