change the icons

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="code-working-outline"></ion-icon>
+                        <ion-icon name="desktop-outline"></ion-icon>
                         <div class="text">Tempor</div>
                         <p>Tipo: Jovem aprendiz <br>
                             Tempo: 10-2020 até 10-2021 <br>
@@ -85,7 +85,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="code-download-outline"></ion-icon>
+                        <ion-icon name="globe-outline"></ion-icon>
                         <div class="text">Secretaria da Controladoria <br>Geral do Estado</div>
                         <p>Tipo: Estagiário <br>
                             Tempo: 11-2021 até 12-2021 <br>
@@ -96,7 +96,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="code-outline"></ion-icon>
+                        <ion-icon name="logo-wordpress"></ion-icon>
                         <div class="text">Prefeitura de Jaboatão dos Guararapes</div>
                         <p>Tipo: Estágio <br>
                             Tempo: 12-2021 até 04-2022 <br>
@@ -107,7 +107,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="bug-outline"></ion-icon>
+                        <ion-icon name="logo-nodejs"></ion-icon>
                         <div class="text">Elife</div>
                         <p>Tipo: Estagiário <br>
                             Tempo: 04-2022(Atualmente) <br>
@@ -134,28 +134,28 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>Java</span>
-                            <span>31.18%</span>
+                            <span>JavaScript</span>
+                            <span>35%</span>
                         </div>
                         <div class="line java"></div>
                         <div class="info">
-                            <span>JavaScript</span>
-                            <span>22.14%</span>
+                            <span>TypeScript</span>
+                            <span>20%</span>
                         </div>
                         <div class="line js"></div>
                         <div class="info">
                             <span>HTML</span>
-                            <span>19.85%</span>
+                            <span>8%</span>
                         </div>
                         <div class="line html"></div>
                         <div class="info">
                             <span>Python</span>
-                            <span>15.2%</span>
+                            <span></span>
                         </div>
                         <div class="line python"></div>
                         <div class="info">
                             <span>CSS</span>
-                            <span>11.64%</span>
+                            <span></span>
                         </div>
                         <div class="line css"></div>
                         <div class="info">
